Added Body action, view and models based on discussion

--- a/DFC.App.RelatedCareers.IntegrationTests/appsettings-template.json
+++ b/DFC.App.RelatedCareers.IntegrationTests/appsettings-template.json
@@ -6,7 +6,7 @@
         "EndpointUrl": "https://localhost:8081",
         "DatabaseId": "jobProfile_IntegrationTest",
         "CollectionId": "relatedCareersSegments_IntegrationTest",
-        "PartitionKey": "/lastReviewed"
+        "PartitionKey": "/Data/LastReviewed"
       }
     }
   },
