--- a/DFC.App.RelatedCareers.IntegrationTests/DFC.App.RelatedCareers.IntegrationTests.csproj
+++ b/DFC.App.RelatedCareers.IntegrationTests/DFC.App.RelatedCareers.IntegrationTests.csproj
@@ -36,5 +36,11 @@
     <ProjectReference Include="..\DFC.App.RelatedCareers\DFC.App.RelatedCareers.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
