--- a/DFC.App.RelatedCareers.MessageFunctionApp/local.settings-template.json
+++ b/DFC.App.RelatedCareers.MessageFunctionApp/local.settings-template.json
@@ -4,21 +4,11 @@
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "service-bus-connection-string": "[Placeholder]",
-    "dummy-segment-topic-name": "jobprofiles-relatedcareers-segment-topic",
-    "dummy-segment-subscription-name": "jobprofiles-relatedcareers-dummy"
-    //"patch-segment-topic-name": "jobprofiles-relatedcareers-segment-topic",
-    //"patch-segment-subscription-name": "jobprofiles-relatedcareers-patch",
-    //"post-segment-topic-name": "jobprofiles-relatedcareers-segment-topic",
-    //"post-segment-subscription-name": "jobprofiles-relatedcareers-post",
-    //"delete-topic-name": "jobprofiles-relatedcareers-delete-topic",
-    //"delete-subscription-name": "jobprofiles-relatedcareers-delete"
+    "cms-messages-topic": "cms-messages-kh",
+    "cms-messages-subscription": "job-profile-relatedcareers"
   },
   "JobProfileRelatedCareersSegmentClientOptions": {
     "Timeout": "00:00:30",
-    "BaseAddress": "https://localhost",
-    "GetEndpoint": "segment/{0}/contents",
-    "PatchEndpoint": "segment/{0}/content-type/markup",
-    "PostEndpoint": "segment",
-    "DeleteEndpoint": "segment/{0}"
+    "BaseAddress": "https://localhost:44340/"
   }
 }
