--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -10,7 +10,7 @@ resources:
   - repository: dfc-devops
     type: github
     name: SkillsFundingAgency/dfc-devops
-    ref: refs/tags/v1.6.4
+    ref: refs/tags/v1.6.6
     endpoint: 'GitHub (ESFA)'
 
 jobs:
@@ -21,7 +21,7 @@ jobs:
 #     ArmTemplateRoot: $(ArmTemplateRoot)
 
 #Build and test application
-- job: BuildDotNetCore
+- job: BuildDotNetCoregi
   displayName: Build-DotNetCore
   pool:
     name: NCS - CI and CD
@@ -31,7 +31,7 @@ jobs:
 
   steps:
   # Build DFC.App.RelatedCareers
-  - template: AzureDevOpsTemplates/Build/dfc-dotnetcore-build.yml@dfc-devops
+  - template: AzureDevOpsTemplates/Build/dfc-dotnetcore-build-sonar.yml@dfc-devops
     parameters:
       SolutionBaseName: $(SolutionBaseName)
       BuildPlatform: $(BuildPlatform)
