--- a/DFC.App.RelatedCareers.MessageFunctionApp/local.settings-template.json
+++ b/DFC.App.RelatedCareers.MessageFunctionApp/local.settings-template.json
@@ -5,7 +5,8 @@
     "FUNCTIONS_WORKER_RUNTIME": "dotnet",
     "service-bus-connection-string": "[Placeholder]",
     "cms-messages-topic": "cms-messages-kh",
-    "cms-messages-subscription": "job-profile-relatedcareers"
+    "cms-messages-subscription": "job-profile-relatedcareers",
+    "APPINSIGHTS_INSTRUMENTATIONKEY": "[instrumentation key]"
   },
   "RelatedCareersSegmentClientOptions": {
     "Timeout": "00:00:30",
