--- a/DFC.App.RelatedCareers/appsettings-template.json
+++ b/DFC.App.RelatedCareers/appsettings-template.json
@@ -16,6 +16,9 @@
       }
     }
   },
+  "ApplicationInsights": {
+    "InstrumentationKey": "[instrumentation key]"
+  },
   "ServiceBusOptions": {
     "ServiceBusConnectionString": "[service bus connection string]",
     "topicName": "job-profile-refresh"
