Test written and passing

--- a/DFC.App.RelatedCareers.Tests.IntegrationTests.API/DFC.App.RelatedCareers.Tests.IntegrationTests.API.csproj
+++ b/DFC.App.RelatedCareers.Tests.IntegrationTests.API/DFC.App.RelatedCareers.Tests.IntegrationTests.API.csproj
@@ -19,4 +19,16 @@
     <ProjectReference Include="..\DFC.App.RelatedCareers.Tests.Common.AzureServiceBusSupport\DFC.App.RelatedCareers.Tests.Common.AzureServiceBusSupport.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resource\JobProfileContentType.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resource\JobProfileDelete.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
