--- a/DFC.App.RelatedCareers.Tests.IntegrationTests.API/DFC.App.RelatedCareers.Tests.IntegrationTests.API.csproj
+++ b/DFC.App.RelatedCareers.Tests.IntegrationTests.API/DFC.App.RelatedCareers.Tests.IntegrationTests.API.csproj
@@ -7,16 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="4.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\DFC.App.RelatedCareers.Tests.Common.APISupport\DFC.App.RelatedCareers.Tests.Common.APISupport.csproj" />
-    <ProjectReference Include="..\DFC.App.RelatedCareers.Tests.Common.AzureServiceBusSupport\DFC.App.RelatedCareers.Tests.Common.AzureServiceBusSupport.csproj" />
+    <PackageReference Include="RestSharp" Version="106.10.1" />
   </ItemGroup>
 
   <ItemGroup>
