--- a/DFC.App.RelatedCareers.FunctionalTests/appsettings-template.json
+++ b/DFC.App.RelatedCareers.FunctionalTests/appsettings-template.json
@@ -4,12 +4,6 @@
     "ConnectionString": "__integrationTestsCmsMessagesServiceBusConnString__"
   },
   "APIConfig": {
-    "Version": "__JobProfileAPIVersion__",
-    "ApimSubscriptionKey": "__ApimJobProfilesKey__",
-    "EndpointBaseUrl": {
-      "ProfileDetail": "__EndpointBaseUrlProfileDetail__",
-      "ProfileSearch": "__EndpointBaseUrlProfileSearch__",
-      "ProfileSummary": "__EndpointBaseUrlProfileSummary__"
-    }
+    "EndpointBaseUrl": "__EndpointBaseUrlRelatedCareers__"
   }
 }
