--- a/DFC.App.RelatedCareers.MessageFunctionApp/DFC.App.RelatedCareers.MessageFunctionApp.csproj
+++ b/DFC.App.RelatedCareers.MessageFunctionApp/DFC.App.RelatedCareers.MessageFunctionApp.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="DFC.Logger.AppInsights" Version="1.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.5" />
     <PackageReference Include="DFC.Functions.DI.Standard" Version="0.1.0" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="4.1.1" />
